Alignment corrected for part 2

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -36,3 +36,10 @@
     -webkit-box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
     box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
 }
+
+.navbar{
+    position:fixed;
+    width:100%;
+    z-index: 1000000;
+    top:0;
+}
